Fix double scrollbar in popup

--- a/popups/scratch-messaging/popup.css
+++ b/popups/scratch-messaging/popup.css
@@ -13,7 +13,7 @@ body {
   margin: 0 auto;
   font-family: "Sora", sans-serif;
   width: auto;
-  height: 500px;
+  height: 491px;
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: #222;
